# CUDA_GEMM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
gemm/: common.hpp  gemm.cu  gemm.hpp
inc/: test_utils.hpp
scripts/: draw_plot.py  gemm_batch_test.csv
